Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <h2>Porque stray kids é o melhor grupo de kpop</h2>
  <h3>Motivos:</h3>
  <li>porque é</li>
- <li>so minha opiniao importa
+ so minha opiniao importa
  <li>os membros são bonitos</li>
   <h2> viva corinthias</h2>
 </body>
